# test-wallet

./: .gitignore  CMakeLists.txt  README.md  address.cpp  address.h  addresslistmodel.cpp  addresslistmodel.h  clipboardmodel.cpp  clipboardmodel.h  images.qrc  main.cpp  qmlcontext.cpp  qmlcontext.h  tx.cpp  tx.h  txlistmodel.cpp  txlistmodel.h  version.h
ui/: AddressItem.qml  AddressListPane.qml  AddressTxListView.qml  ApplicationManager.qml  TxItem.qml  TxListPane.qml  WApplicationWindow.qml  main.qml
ui/dialogs/: AddressTxDialog.qml  SettingsDialog.qml  WDialog.qml
